commit dashboard FE

--- a/Ranwildimal_Admin_FE/src/App.css
+++ b/Ranwildimal_Admin_FE/src/App.css
@@ -1,5 +1,12 @@
-.App {
-  text-align: center;
+.container{
+  display: flex;
+}
+.navbarr{
+  flex: 1;
+}
+
+.otherPages{
+  flex: 4;
 }
 
 .App-logo {
