--- a/Ranwildimal_Admin_FE/src/App.css
+++ b/Ranwildimal_Admin_FE/src/App.css
@@ -1,13 +1,10 @@
 .containers{
-  display: flex;
-}
-.navbarr{
-  flex: 1;
+  display: grid;
+  grid-template-columns: 264px auto;
 }
 
-.otherPages{
-  flex: 4;
-}
+
+
 
 .App-logo {
   height: 40vmin;
@@ -19,6 +16,17 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
+
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (max-width: 991px) {
+  .containers{
+    display: grid;
+    grid-template-columns: auto;
+  }
+  
+}
+
 
 .App-header {
   background-color: #282c34;
