--- a/Ranwildimal_Admin_FE/src/Component/navbar/style.css
+++ b/Ranwildimal_Admin_FE/src/Component/navbar/style.css
@@ -1,4 +1,3 @@
-
 body {
   font-family: "Open Sans", sans-serif;
   font-size: 14px;
@@ -5340,7 +5339,7 @@ body.layout-6 .pcoded-navbar.navbar-collapsed:hover ~ .pcoded-main-container:bef
 }
 body.layout-6 .pcoded-navbar.menupos-static .navbar-wrapper,
 body.layout-6 .pcoded-navbar.menupos-static .scroll-div.navbar-content {
-  position: absolute;
+  position: fixed;
   height: 100%;
 }
 body.layout-6 .pcoded-navbar.navbar-collapsed:hover .navbar-brand .b-brand {
