--- a/Ranwildimal_Admin_FE/src/Component/dashboardFeature/dashboardFeature.css
+++ b/Ranwildimal_Admin_FE/src/Component/dashboardFeature/dashboardFeature.css
@@ -2,21 +2,45 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
-
+    margin-top: 3%;
 }
 
-.featureItem {
+.featureItem_1 {
     flex: 1;
     margin: 0px 20px;
     padding: 30px;
     border-radius: 10px;
     cursor: pointer;
+    background-color: #E38295;
+    color: white;
+    -webkit-box-shadow: 0px 0px 11px -1px #000000;
+    box-shadow: 0px 0px 11px -1px #000000;
+}
+.featureItem_2 {
+    flex: 1;
+    margin: 0px 20px;
+    padding: 30px;
+    border-radius: 10px;
+    cursor: pointer;
+    background-color: #C5E382;
+    color: #163265;
+    -webkit-box-shadow: 0px 0px 11px -1px #000000;
+    box-shadow: 0px 0px 11px -1px #000000;
+}
+.featureItem_3 {
+    flex: 1;
+    margin: 0px 20px;
+    padding: 30px;
+    border-radius: 10px;
+    cursor: pointer;
+    background-color: #A082E3;
+    color: white;
     -webkit-box-shadow: 0px 0px 11px -1px #000000;
     box-shadow: 0px 0px 11px -1px #000000;
 }
 
 .featuredTitle {
-    font-size: 20px;
+    font-size: 30px;
 }
 .featuredNumberContainer{
     margin: 10px 0px;
@@ -25,7 +49,7 @@
 }
 
 .featureNumber{
-    font-size: 30px;
+    font-size: 50px;
     font-weight: 600;
 }
 
@@ -37,5 +61,4 @@
 
 .featureSub {
     font-size: 15px;
-    color: grey;
 }
