--- a/Ranwildimal_Admin_FE/src/Component/navbar/style.css
+++ b/Ranwildimal_Admin_FE/src/Component/navbar/style.css
@@ -1458,10 +1458,9 @@ p.text-muted {
           align-items: center;
 }
 .b-brand .b-bg {
-  background: linear-gradient(-135deg, #1de9b6 0%, #1dc4e9 100%);
-  border-radius: 10px;
-  width: 35px;
-  height: 35px;
+  width: 100%;
+  height: 100%;
+  padding: 10% 0 10% 0;  
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
@@ -2007,7 +2006,7 @@ p.text-muted {
   transition: all 0.3s ease-in-out;
   -webkit-box-shadow: 1px 0 20px 0 #3f4d67;
           box-shadow: 1px 0 20px 0 #3f4d67;
-  width: 264px;
+  width: 300px;
   height: 100vh;
   top: 0;
   background: #4E8A3E;
@@ -2032,7 +2031,7 @@ p.text-muted {
   float: left;
   height: 70px;
   text-align: center;
-  margin-right: 0;
+  margin: 25% 0 25% 0;
   padding: 10px 20px;
   -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
