--- a/Ranwildimal_Admin_FE/src/Component/chart/chart.css
+++ b/Ranwildimal_Admin_FE/src/Component/chart/chart.css
@@ -3,6 +3,7 @@
     padding: 20px;
     -webkit-box-shadow: 0px 0px 11px -1px #000000;
     box-shadow: 0px 0px 11px -1px #000000;
+    border-radius: 10px;
 }
 .chartTitle {
     margin-bottom: 20px;
