--- a/Ranwildimal_Admin_FE/src/Component/navbar/style.css
+++ b/Ranwildimal_Admin_FE/src/Component/navbar/style.css
@@ -2005,7 +2005,7 @@ p.text-muted {
   transition: all 0.3s ease-in-out;
   -webkit-box-shadow: 1px 0 20px 0 #3f4d67;
           box-shadow: 1px 0 20px 0 #3f4d67;
-  width: 300px;
+  width: 264px;
   height: 100vh;
   top: 0;
   background: #4E8A3E;
@@ -2140,6 +2140,7 @@ p.text-muted {
   display: block;
   border-radius: 0;
   position: relative;
+  color: #C1D29D;
 }
 .pcoded-navbar .pcoded-inner-navbar li > a .pcoded-mtext {
   position: relative;
@@ -2159,9 +2160,33 @@ p.text-muted {
   height: 30px;
   text-align: center;
 }
+.pcoded-navbar .pcoded-inner-navbar li.active > a, .pcoded-navbar .pcoded-inner-navbar li:focus > a, .pcoded-navbar .pcoded-inner-navbar li:hover > a {
+  color: #1dc4e9;
+}
+.pcoded-navbar .pcoded-inner-navbar li .pcoded-submenu > li.active > a:before, .pcoded-navbar .pcoded-inner-navbar li .pcoded-submenu > li:focus > a:before, .pcoded-navbar .pcoded-inner-navbar li .pcoded-submenu > li:hover > a:before {
+  background: #1dc4e9;
+}
+.pcoded-navbar .pcoded-inner-navbar > li.active:after, .pcoded-navbar .pcoded-inner-navbar > li.pcoded-trigger:after {
+  content: "";
+  background-color: #1dc4e9;
+  z-index: 1027;
+  position: absolute;
+  left: 0;
+  top: 5px;
+  width: 3px;
+  height: calc(100% - 5px);
+}
+/*Set color when item is selected*/
+.pcoded-navbar .pcoded-inner-navbar > li.active > a, .pcoded-navbar .pcoded-inner-navbar > li.pcoded-trigger > a{
+  background: #D6534B;
+  color: #fff;
+}
+.pcoded-navbar .pcoded-inner-navbar > .pcoded-menu-caption.active:after, .pcoded-navbar .pcoded-inner-navbar > .pcoded-menu-caption.pcoded-trigger:after {
+  display: none;
+}
 .pcoded-navbar .pcoded-inner-navbar li > a > .pcoded-micon + .pcoded-mtext {
   position: absolute;
-  top: 15px;
+  margin: 2% 0 0 3.5%;
 }
 .pcoded-navbar .pcoded-inner-navbar li.pcoded-hasmenu > a:after {
   content: "\e844";
@@ -2209,7 +2234,7 @@ p.text-muted {
   left: 55px;
 }
 .pcoded-navbar .pcoded-inner-navbar li.pcoded-menu-caption {
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 600;
   padding: 25px 20px 5px;
   text-transform: uppercase;
@@ -2414,29 +2439,7 @@ p.text-muted {
 .pcoded-navbar .pcoded-menu-caption {
   color: #e8edf7;
 }
-.pcoded-navbar .pcoded-inner-navbar li.active > a, .pcoded-navbar .pcoded-inner-navbar li:focus > a, .pcoded-navbar .pcoded-inner-navbar li:hover > a {
-  color: #1dc4e9;
-}
-.pcoded-navbar .pcoded-inner-navbar li .pcoded-submenu > li.active > a:before, .pcoded-navbar .pcoded-inner-navbar li .pcoded-submenu > li:focus > a:before, .pcoded-navbar .pcoded-inner-navbar li .pcoded-submenu > li:hover > a:before {
-  background: #1dc4e9;
-}
-.pcoded-navbar .pcoded-inner-navbar > li.active:after, .pcoded-navbar .pcoded-inner-navbar > li.pcoded-trigger:after {
-  content: "";
-  background-color: #1dc4e9;
-  z-index: 1027;
-  position: absolute;
-  left: 0;
-  top: 5px;
-  width: 3px;
-  height: calc(100% - 5px);
-}
-.pcoded-navbar .pcoded-inner-navbar > li.active > a, .pcoded-navbar .pcoded-inner-navbar > li.pcoded-trigger > a {
-  background: #D6534B;
-  color: #fff;
-}
-.pcoded-navbar .pcoded-inner-navbar > .pcoded-menu-caption.active:after, .pcoded-navbar .pcoded-inner-navbar > .pcoded-menu-caption.pcoded-trigger:after {
-  display: none;
-}
+
 
 .pcoded-navbar.mob-open ~ .pcoded-header,
 .pcoded-navbar.mob-open ~ .pcoded-main-container, .pcoded-navbar.navbar-collapsed:hover ~ .pcoded-header,
