--- a/Ranwildimal_Admin_FE/src/Component/widgetBoard/widgetBoard.css
+++ b/Ranwildimal_Admin_FE/src/Component/widgetBoard/widgetBoard.css
@@ -4,6 +4,7 @@
     box-shadow: 0px 0px 11px -1px #000000;
     padding: 20px;
     margin-right: 20px;
+    border-radius: 10px;
 }
 
 .boardTitle {
