--- a/Ranwildimal_Admin_FE/src/Component/widgetChart/widgetChart.css
+++ b/Ranwildimal_Admin_FE/src/Component/widgetChart/widgetChart.css
@@ -3,7 +3,7 @@
     -webkit-box-shadow: 0px 0px 11px -1px #000000;
     box-shadow: 0px 0px 11px -1px #000000;
     padding: 20px;
-    margin-right:20px;
+    border-radius: 10px;
 }
 
 .chartTitle {
