--- a/Ranwildimal_Admin_FE/src/Layout/Admin_Management/profile.css
+++ b/Ranwildimal_Admin_FE/src/Layout/Admin_Management/profile.css
@@ -1,6 +1,39 @@
 body {
     margin: 0;
   }
+  .password_register{
+    background: #4e8a3e;
+    border-radius: 25px;
+    display: flex;
+    justify-content: center;
+    -o-border-radius: 25px;
+    -ms-border-radius: 25px;
+    -moz-border-radius: 25px;
+    -webkit-border-radius: 25px;
+    box-shadow: 0px 6px 17px 0px rgba(0, 0, 0, 0.15);
+    -o-box-shadow: 0px 6px 17px 0px rgba(0, 0, 0, 0.15);
+    -ms-box-shadow: 0px 6px 17px 0px rgba(0, 0, 0, 0.15);
+    -moz-box-shadow: 0px 6px 17px 0px rgba(0, 0, 0, 0.15);
+    -webkit-box-shadow: 0px 6px 17px 0px rgba(0, 0, 0, 0.15);
+    width: 150px;
+    border: none;
+    cursor: pointer;
+    color: #fff;
+    font-weight: 700;
+    font-size: 15px;
+    padding: 12px;
+    margin: 20px 10px 20px 15px;
+  }
+  .password_field{
+    display: grid;
+  }
+  .input-password{
+    height: 50px;
+    padding-left: 10px;
+    margin-bottom: 5%;
+    border: 1px solid #4e8a3e;
+    border-radius: 10px;
+  }
   .avatar-pic {
     width: 200px;
     height: 200px;
@@ -240,7 +273,6 @@ body {
   }
   .form-v10-content .form-detail .form-right .register {
     background: #fff;
-    color: #4e8a3e;
     border-radius: 25px;
     -o-border-radius: 25px;
     -ms-border-radius: 25px;
