--- a/Ranwildimal_Admin_FE/src/Component/widgetChart/widgetChart.css
+++ b/Ranwildimal_Admin_FE/src/Component/widgetChart/widgetChart.css
@@ -2,13 +2,14 @@
     flex: 2;
     -webkit-box-shadow: 0px 0px 11px -1px #000000;
     box-shadow: 0px 0px 11px -1px #000000;
-    padding: 20px;
+    padding: 20px 20px 0px 20px;
     border-radius: 10px;
 }
 
 .chartTitle {
     font-size: 32px;
     font-weight: 600;
+    color: #4E8A3E;
 }
 .chartPie{
     padding: 10px 20px;
