--- a/Ranwildimal_Admin_FE/src/Layout/Login/Login.css
+++ b/Ranwildimal_Admin_FE/src/Layout/Login/Login.css
@@ -8159,7 +8159,7 @@
     background: #e3b04b !important; }
   
   .ftco-section {
-    padding: 12em 0; }
+    padding: 6% 0; }
   
   .ftco-no-pt {
     padding-top: 0; }
