--- a/Ranwildimal_Admin_FE/src/Layout/Home/home.css
+++ b/Ranwildimal_Admin_FE/src/Layout/Home/home.css
@@ -1,4 +1,13 @@
-.containers{
+.containers {
+  display: grid;
+  grid-template-columns: 264px auto;
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (max-width: 991px) {
+  .containers {
     display: grid;
-    grid-template-columns: 264px auto;
+    grid-template-columns: auto;
   }
+
+}
