--- a/Ranwildimal_Admin_FE/src/Component/footer/footer.css
+++ b/Ranwildimal_Admin_FE/src/Component/footer/footer.css
@@ -3,5 +3,23 @@
     font: small;
     margin-left: 1%;
     margin-top: 2%;
+    margin-bottom: 2% ;
     width: 100%;
+}
+
+.img-footer {
+    width: 100%;
+    height: 100%;
+}
+
+.subtitle {
+    text-align: center;
+}
+
+.text-footer{
+    color: #c1d29d !important;
+}
+
+.information-footer{
+    font-size: 16px;
 }
